fix scrollbar

--- a/src/assets/scss/base/helper.scss
+++ b/src/assets/scss/base/helper.scss
@@ -228,7 +228,7 @@
 }
 
 .gray3 {
-  color: $gray3;
+  color: $gray3 !important;
 }
 
 .bg-dark {
