--- a/src/assets/scss/components/input.scss
+++ b/src/assets/scss/components/input.scss
@@ -7,6 +7,7 @@
     color: $color-light;
   }
 }
+
 .input--search {
   padding-left: px(15) !important;
   padding-right: px(15) !important;
@@ -21,6 +22,7 @@
 
   @include media("<desktop") {
     width: 100% !important;
+    transform: unset !important;
   }
 
   &:focus,
@@ -28,6 +30,7 @@
     outline: none;
   }
 }
+
 .input-control {
   list-style: none;
   box-sizing: border-box;
@@ -52,6 +55,7 @@
   &:hover {
     border-color: $color-primary;
   }
+
   &:focus {
     border-color: $color-primary;
     box-shadow: 0 0 0 2px rgba($color: $color-primary, $alpha: 0.3);
@@ -64,6 +68,7 @@
   outline: none;
   border-bottom: 1px solid $gray4;
 }
+
 .input--large {
   font-size: px(60);
 }
